import { describe, expect, it } from "vitest";
import {
  biasedInheritProbability, breedTraits, CONFIG, coinsPerHourOf, effectiveParentTraits, generateTraits,
  probabilityOf, rarityBreakdown, resolveOwnTraits, roll01, synergyMultiplier, traitsOf,
} from "./generator.js";

function findSeedWithTailColor(color, searchLimit = 5000) {
  for (let s = 1n; s <= BigInt(searchLimit); s++) {
    if (generateTraits(s).tail.color === color) return s;
  }
  throw new Error(`nenhum seed com cauda ${color} nos primeiros ${searchLimit}`);
}

describe("roll01", () => {
  it("é determinístico pro mesmo seed+salt", () => {
    expect(roll01(123n, "body_shimmer")).toBe(roll01(123n, "body_shimmer"));
  });

  it("varia com o salt (evita correlação entre traits)", () => {
    expect(roll01(123n, "a")).not.toBe(roll01(123n, "b"));
  });

  it("sempre cai em [0, 1)", () => {
    for (const seed of [0n, 1n, -1n, 999999999999n, -999999999999n]) {
      const r = roll01(seed, "qualquer");
      expect(r).toBeGreaterThanOrEqual(0);
      expect(r).toBeLessThan(1);
    }
  });
});

describe("generateTraits", () => {
  it("é determinístico pro mesmo seed", () => {
    const a = generateTraits(42n);
    const b = generateTraits(42n);
    expect(a).toEqual(b);
  });

  it("seeds diferentes tendem a gerar traits diferentes", () => {
    const a = generateTraits(1n);
    const b = generateTraits(2n);
    expect(a).not.toEqual(b);
  });

  it("sem brilho (tier None) não sorteia cor/opacidade de shimmer", () => {
    // Busca um seed que caia em "None" (78% de chance, achar um é rápido)
    let seed = 0n;
    let traits;
    do { traits = generateTraits(seed); seed += 1n; } while (traits.shimmerTier !== "None" && seed < 1000n);
    expect(traits.shimmerTier).toBe("None");
    expect(traits.shimmerColor).toBeNull();
    expect(traits.shimmerOpacity).toBe(0);
  });

  it("padrão 'None' não sorteia cor/tamanho/opacidade de padrão", () => {
    const traits = generateTraits(42n);
    for (const part of [traits.tail, traits.dorsal, traits.pectoral]) {
      if (part.pattern === "None") {
        expect(part.patternColor).toBeNull();
        expect(part.patternSize).toBeNull();
        expect(part.patternOpacity).toBeNull();
      }
    }
  });

  // Trava de regressão: se o algoritmo mudar sem querer (reordenar hashes, trocar
  // fórmula), este snapshot falha. Atualizar com `vitest run -u` só quando a mudança
  // no motor de traits for intencional (e o TraitConfigVersion do backend também subir).
  it("seeds fixos batem com o snapshot salvo (regressão do motor determinístico)", () => {
    expect(generateTraits(1n)).toMatchSnapshot();
    expect(generateTraits(1234567890123n)).toMatchSnapshot();
  });
});

describe("traitsOf", () => {
  it("peixe normal usa generateTraits(seed)", () => {
    const creature = { seed: "42", isBred: false };
    expect(traitsOf(creature)).toEqual(generateTraits(42n));
  });

  it("filhote usa breedTraits com os seeds dos pais", () => {
    const creature = { seed: "999", isBred: true, parentASeed: "1", parentBSeed: "2" };
    expect(traitsOf(creature)).toEqual(breedTraits(999n, 1n, 2n));
  });
});

describe("biasedInheritProbability", () => {
  it("bias 0 é sempre 50/50, mesmo com probabilidades bem diferentes", () => {
    expect(biasedInheritProbability(0.002, 0.78, 0)).toBe(0.5);
  });

  it("probabilidades iguais ficam 50/50 mesmo com bias > 0", () => {
    expect(biasedInheritProbability(0.1, 0.1, 0.5)).toBeCloseTo(0.5, 10);
  });

  it("pesa a favor do valor mais raro (probabilidade menor) quando bias > 0", () => {
    const p = biasedInheritProbability(0.002, 0.78, 0.15); // A é raro (lendário), B é comum
    expect(p).toBeGreaterThan(0.5);
  });
});

describe("probabilityOf", () => {
  it("soma das probabilidades da tabela é 1", () => {
    const table = [["a", 70], ["b", 20], ["c", 10]];
    const total = table.reduce((s, [v]) => s + probabilityOf(table, v), 0);
    expect(total).toBeCloseTo(1, 10);
  });
});

describe("coinsPerHourOf", () => {
  it("cresce com a raridade", () => {
    const comum = coinsPerHourOf(4);
    const raro = coinsPerHourOf(7.5);
    const lendario = coinsPerHourOf(14);
    expect(comum).toBeLessThan(raro);
    expect(raro).toBeLessThan(lendario);
  });

  it("sinergia multiplica linearmente a renda", () => {
    const base = coinsPerHourOf(5, 1);
    const comSinergia = coinsPerHourOf(5, 1.5);
    expect(comSinergia).toBeCloseTo(base * 1.5, 10);
  });
});

describe("synergyMultiplier", () => {
  it("1 peixe (ou 0) não tem bônus", () => {
    expect(synergyMultiplier(1)).toBe(1);
    expect(synergyMultiplier(0)).toBe(1);
  });

  it("cresce com mais peixes da mesma cor, até o teto", () => {
    expect(synergyMultiplier(2)).toBeGreaterThan(1);
    expect(synergyMultiplier(3)).toBeGreaterThan(synergyMultiplier(2));
    expect(synergyMultiplier(1000)).toBeLessThanOrEqual(1.8); // maxBonus 0.80
  });
});

describe("breedTraits — viés de raridade em cor de parte (31/07/2026)", () => {
  // Antes só o shimmerTier usava rarityBias; cor/padrão de parte herdavam 50/50 puro,
  // deixando o filhote livre pra regredir perto do piso da população mesmo vindo de
  // pais decentes. Espelha os testes equivalentes em BreedTraitsTests.cs (C#).
  it("inclina a herança de cor pro valor mais raro entre os pais", () => {
    const whiteParent = findSeedWithTailColor("PureWhite");
    const orangeParent = findSeedWithTailColor("Orange", 50);
    const rarityBias = 0.6;
    const n = 4000;

    let whiteCount = 0;
    for (let childSeed = 1n; childSeed <= BigInt(n); childSeed++) {
      const color = breedTraits(childSeed, whiteParent, orangeParent, 0, rarityBias).tail.color;
      if (color === "PureWhite") whiteCount++;
    }

    const expected = biasedInheritProbability(0.01, 0.22, rarityBias);
    expect(expected).toBeGreaterThan(0.5);
    expect(whiteCount / n).toBeGreaterThan(expected - 0.05);
    expect(whiteCount / n).toBeLessThan(expected + 0.05);
  });

  it("bias 0 (comportamento antigo) continua 50/50 puro — não quebra o default", () => {
    const whiteParent = findSeedWithTailColor("PureWhite");
    const orangeParent = findSeedWithTailColor("Orange", 50);
    const n = 4000;

    let whiteCount = 0;
    for (let childSeed = 1n; childSeed <= BigInt(n); childSeed++) {
      const color = breedTraits(childSeed, whiteParent, orangeParent, 0, 0).tail.color;
      if (color === "PureWhite") whiteCount++;
    }
    expect(whiteCount / n).toBeGreaterThan(0.45);
    expect(whiteCount / n).toBeLessThan(0.55);
  });

  it("com os parâmetros reais de produção, não vira lavagem garantida", () => {
    const whiteParent = findSeedWithTailColor("PureWhite");
    const orangeParent = findSeedWithTailColor("Orange", 50);
    const { mutationChance, rarityBias } = CONFIG.breeding;
    const n = 3000;

    let whiteCount = 0;
    for (let childSeed = 1n; childSeed <= BigInt(n); childSeed++) {
      const color = breedTraits(childSeed + 10_000_000n, whiteParent, orangeParent, mutationChance, rarityBias).tail.color;
      if (color === "PureWhite") whiteCount++;
    }
    expect(whiteCount / n).toBeLessThan(0.70);
  });
});

describe("chance de herdar traço de um avô (31/07/2026)", () => {
  // Espelha os testes equivalentes em BreedTraitsTests.cs (C#) — testa
  // effectiveParentTraits/resolveOwnTraits diretamente em vez de tentar isolar o sinal na
  // saída ponta-a-ponta (o valor "próprio" de um pai bred já reflete os mesmos avós que o
  // reach-back alcançaria, então observar só a cor final do filhote é ambíguo).
  it("sem avós, sempre retorna o próprio", () => {
    const own = generateTraits(1n);
    for (let childSeed = 1n; childSeed <= 500n; childSeed++)
      expect(effectiveParentTraits(childSeed, "salt", own, null, null, 1)).toEqual(own);
  });

  it("com avós, a fração que alcança um avô aproxima reachChance", () => {
    const own = generateTraits(1n);
    const grandparent1 = generateTraits(2n);
    const grandparent2 = generateTraits(3n);
    const reachChance = 0.3;
    const n = 15000;

    let reached = 0;
    for (let childSeed = 1n; childSeed <= BigInt(n); childSeed++) {
      const result = effectiveParentTraits(childSeed, "salt", own, grandparent1, grandparent2, reachChance);
      if (result !== own) reached++;
    }
    expect(reached / n).toBeGreaterThan(reachChance - 0.03);
    expect(reached / n).toBeLessThan(reachChance + 0.03);
  });

  it("reachChance 0 nunca alcança o avô mesmo com avós conhecidos", () => {
    const own = generateTraits(1n);
    const grandparent1 = generateTraits(2n);
    const grandparent2 = generateTraits(3n);
    for (let childSeed = 1n; childSeed <= 2000n; childSeed++)
      expect(effectiveParentTraits(childSeed, "salt", own, grandparent1, grandparent2, 0)).toEqual(own);
  });

  it("resolveOwnTraits: pai fresco usa generateTraits direto", () => {
    expect(resolveOwnTraits(42n, null, null, 0.08, 0.15)).toEqual(generateTraits(42n));
  });

  it("resolveOwnTraits: pai filhote recomputa via os avós, nunca generateTraits(seed) direto (bug corrigido)", () => {
    const resolved = resolveOwnTraits(999n, 1n, 2n, 0.08, 0.15);
    expect(resolved).toEqual(breedTraits(999n, 1n, 2n, 0.08, 0.15));
    expect(resolved).not.toEqual(generateTraits(999n));
  });

  it("breedTraits sem ancestralidade de avós é idêntico ao comportamento antigo (regressão)", () => {
    const semAvos = breedTraits(42n, 1n, 2n, 0.08, 0.15);
    const comAvosNulos = breedTraits(42n, 1n, 2n, 0.08, 0.15, null, null, null, null, 0.15);
    expect(comAvosNulos).toEqual(semAvos);
  });
});

describe("rarityBreakdown", () => {
  it("soma dos fatores bate com o total retornado", () => {
    const { total, factors } = rarityBreakdown(42n);
    const sum = factors.reduce((s, f) => s + f.points, 0);
    expect(sum).toBeCloseTo(total, 10);
  });

  it("sempre inclui o fator de shimmerTier do corpo", () => {
    const { factors } = rarityBreakdown(42n);
    expect(factors.some((f) => f.key === "shimmerTier")).toBe(true);
  });
});
